# audio-manager

./: .gitignore
desktop/AudioManager/: CMakeLists.txt  exchange.h  handler.cpp  handler.h  main.cpp  widget.cpp  widget.h  widget.ui
firmware/sven-control/: .gitignore  CMakeLists.txt  platformio.ini
firmware/sven-control/cmake/Platform/: Arduino.cmake
firmware/sven-control/src/: PT2313.cpp  PT2313.h  buffers.cpp  exchange.h  i2cmaster.S  i2cmaster.h  launch.cpp  main.cpp
